# SAKIGo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
AI/: Context.md  Decisions.md  Guide.md  ImplementationChecklist.md  Issues.md  Log.md  RebuildPlan.md  ScanResult.md
Design/: Attention.md  IssueClassification.md  ModelConfig.md  ModelSpecs.md  PlanArchitecture.md  PlanRule.md  Thoughts.md
Design/Architecture/: EquivariantAttention.md  Heads.md  ModelArchitecture.md  Stem.md  Trunk.md
Design/Distillation/: Target.md
Design/Engine/: Scope.md
Design/Input/: BoardInput.md  Markov.md  NonBoardInput.md
Design/ModelSpecs/: HeadShapes.md  ModelSpecs.md  StemShapes.md
Design/Output/: Auxiliary.md  FeatureAuxiliary.md  Ownership.md  Policy+Budget.md  Score.md  SpatialGlobalDistinction.md  TimeAuxiliary.md  Winrate.md
Design/Search/: README.md
Design/Train/: BestMoveVisit.md  BranchedGames.md  SearchBasedStudentTeacher.md  SubTreeHarvest.md
Distillation/: README.md
Engine/: Cargo.toml  README.md  pyproject.toml
Engine/.cargo/: config.toml
Engine/src/: board.rs  encoder.rs  game.rs  hash.rs  lib.rs  python.rs  rules.rs  scoring.rs
Model/: README.md  __init__.py  test_sakigo_model.py
Training/: __init__.py  checkpoints.py  common.py  data.py  generate_katago_phase1.py  graph_step.py  losses.py  metrics.py  rulesets.py  run_phase1_suite.py  selfplay_eval.py  test_training_orchestrator.py  train.py
Viewer/: model_architecture.html  pipeline_viewer.html
equivariant_attention/: README.md  __init__.py  groups.py  layers.py
sakigo/: CONTRACTS.md  __init__.py  constants.py  rulesets.py
tests/: test_book_generation.py  test_compile_safety.py  test_engine_binding.py  test_equivariant_attention_library.py  test_eval.py  test_generate.py  test_legacy_checkpoints.py  test_losses.py  test_p1_model_parity.py  test_p1_specs.py  test_p2_data.py  test_p3_trainer.py
(+53 files in other folders)
