[project]
name = "sakigo"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy==1.26.4",
    "pytest==9.0.2",
    "torch==2.11.0+cu128",
    "zstandard>=0.25.0",
    "tensorboard>=2.20",
    "tqdm>=4.66",
    "triton-windows>=3.5; sys_platform == 'win32'",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
