[package]
name = "sakigo-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "sakigo_engine"
path = "src/lib.rs"

[dependencies]
# PyO3 binding is parked in src/python.rs: declaring `pyo3` as an optional
# dependency breaks offline builds (lock resolution needs the registry), and
# the crates mirror is currently unreachable. See AI/Issues.md.
