[package]
name = "sakigo-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "sakigo_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.23", optional = true, features = ["extension-module", "abi3-py312"] }
